--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anetos",
+  "name": "the-solace-manor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "clsx": "^2.1.1",
     "next": "15.3.0",
     "react": "^19.0.0",
