--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
