--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "next": "15.3.0",
