commit new update

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
@@ -18,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "next": "15.3.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.2.0"
